--- a/frontend/svelte-typescript/package.json
+++ b/frontend/svelte-typescript/package.json
@@ -18,8 +18,14 @@
 		"@playwright/test": "^1.28.1",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.20.4",
+		"@types/axios": "^0.14.0",
+		"@types/cookie": "^0.5.1",
+		"@types/dotenv": "^8.2.0",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
+		"axios": "^1.4.0",
+		"cookie": "^0.5.0",
+		"dotenv": "^16.3.1",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.30.0",
@@ -27,6 +33,10 @@
 		"prettier-plugin-svelte": "^2.10.1",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
+		"svelte-forms-lib": "^2.0.1",
+		"svelte-loading-spinners": "^0.3.4",
+		"svelte-query": "^0.0.1-alpha1",
+		"svelte-toast": "^1.0.0",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.4.2",
